Added Center Tags

--- a/firstwebpage.css
+++ b/firstwebpage.css
@@ -3,15 +3,11 @@ body{
 	color: #AAFF00;
 	background-color: lightblue;
 	text-shadow: 1px 1px #ff0000;
+	text-align: center;
 }
 
 h1 {
 	font-size: 1.3em;
 	text-align: center;
 	text-shadow: 1px 1px #ff0000;
-}
-center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
