--- a/my_website/firstwebpage.css
+++ b/my_website/firstwebpage.css
@@ -1,7 +1,7 @@
 body{
 	font-family: "Helvetica", "Arial", fantasy;
 	color: #AAFF00;
-	background-color: lightblue;
+	background-color: #ADD3F9;
 	text-shadow: 1px 1px #ff0000;
 	text-align: center;
 }
